--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@mui/icons-material": "^5.10.9",
+    "@react-spring/parallax": "^9.5.5",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spring": "^9.5.5",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
