--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.0",
     "react-spring": "^9.5.5",
     "styled-components": "^5.3.6"
   },
