--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.10",
+    "@mui/styled-engine-sc": "npm:@mui/styled-engine-sc@latest",
     "@react-spring/parallax": "^9.5.5",
     "next": "12.3.1",
+    "next-transpile-modules": "^9.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.0",
@@ -28,6 +31,7 @@
     "typescript": "4.8.4"
   },
   "resolutions": {
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   }
 }
