--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.10",
     "@mui/styled-engine-sc": "npm:@mui/styled-engine-sc@latest",
     "@react-spring/parallax": "^9.5.5",
+    "@vercel/analytics": "^0.1.3",
     "color": "^4.2.3",
     "next": "12.3.1",
     "next-transpile-modules": "^9.1.0",
